# temp-dashboard

./: README.md  server.p6  tabledef
client/: Makefile  temper.service  temper.timer
server/: Air.tabledef  CMakeLists.txt  Makefile  Monitor.tabledef  ch.hpp  index.html  monitor.cpp  scommon.hpp  server.cpp  server.p6  smonitor.cpp  smonitor.service  smonitor.timer
server/service/: temp-server-mon.service  temp-server-mon.timer
